--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "24.0.1",
+    "@types/react": "19.1.8",
+    "typescript": "5.8.3"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
